reduced the size of the left navigator's buttons and a few spaces in the sprint list.

--- a/sources/VeloCity.Wpf.Presentation.Styles/Skins/DarkSkin.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Skins/DarkSkin.xaml
@@ -117,7 +117,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     ================================================================================================
     -->
 
-    <Color x:Key="UnselectedNavigatorItemColor">#3F3F46</Color>
+    <Color x:Key="UnselectedNavigatorItemColor">Transparent</Color>
     <SolidColorBrush x:Key="UnselectedNavigatorItemBrush" Color="{StaticResource UnselectedNavigatorItemColor}" />
 
     <!--
